--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,12 +1,12 @@
 name: Semantic Release
 on:
-  pull_request:
-    types:
-      - closed
+  push:
+    # types:
+    #   - closed
     branches:
       - main
-    paths:
-      - action.yaml
+    # paths:
+    #   - action.yaml
 jobs:
   semantic-release:
     if: github.event.pull_request.merged == true
