--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,15 +1,15 @@
 name: Semantic Release
 on:
-  pull_request:
-    types:
-      - closed
+  push:
+    # types:
+    #   - closed
     branches:
       - main
-    paths:
-      - action.yaml
+    # paths:
+    #   - action.yaml
 jobs:
   semantic-release:
-    if: github.event.pull_request.merged == true
+    # if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
       - uses: catalystsquad/action-release-action@v1
